--- a/BizplayReceipt.xcodeproj/xcshareddata/xcschemes/BizplayReceipt.xcscheme
+++ b/BizplayReceipt.xcodeproj/xcshareddata/xcschemes/BizplayReceipt.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "769C23F023A74F8200D92396"
-               BuildableName = "&#x1107;&#x1175;&#x1111;&#x1173;&#x11af; &#x110b;&#x1167;&#x11bc;&#x1109;&#x116e;&#x110c;&#x1173;&#x11bc;.app"
+               BuildableName = "BizplayReceipt.app"
                BlueprintName = "BizplayReceipt"
                ReferencedContainer = "container:BizplayReceipt.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "769C23F023A74F8200D92396"
-            BuildableName = "&#x1107;&#x1175;&#x1111;&#x1173;&#x11af; &#x110b;&#x1167;&#x11bc;&#x1109;&#x116e;&#x110c;&#x1173;&#x11bc;.app"
+            BuildableName = "BizplayReceipt.app"
             BlueprintName = "BizplayReceipt"
             ReferencedContainer = "container:BizplayReceipt.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "769C23F023A74F8200D92396"
-            BuildableName = "&#x1107;&#x1175;&#x1111;&#x1173;&#x11af; &#x110b;&#x1167;&#x11bc;&#x1109;&#x116e;&#x110c;&#x1173;&#x11bc;.app"
+            BuildableName = "BizplayReceipt.app"
             BlueprintName = "BizplayReceipt"
             ReferencedContainer = "container:BizplayReceipt.xcodeproj">
          </BuildableReference>
